--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-    <title>Coder</title>
+    <title>JS keyboard</title>
     <meta charset="utf-8">
 
     <link href="styles.css" media="screen" rel="stylesheet" type="text/css"/>
